# eos-boot-helper

./: .flake8  .gitattributes  .gitignore  10-allow-mounting-endless-image-device.rules  10-eos-oom-policy.conf  50-disk-bfq.rules  50-eos-migrate-chrome  50-eos-user.preset  50-eos.preset  50-laptop-keyboard-wakeup.rules  50-meson-vdec.rules  50-usb-mouse-wakeup.rules  50-wakeup-by-usb-hid.rules  60-suspend-mode.rules  Makefile.am  autogen.sh  boot.mount  com.endlessm.SetGoodRoot.desktop  com.endlessm.SetGoodRoot.service  com.endlessm.TestMode.policy.in  configure.ac  dev-disk-by\x2dlabel-eos\x2dswap.swap  endless-mount-dirs.service  endless.mount  eos-add-flatpak-apps-repos  eos-add-flatpak-apps-repos.service  eos-add-flatpak-flathub-repos  eos-add-flatpak-flathub-repos.service  eos-add-flatpak-gnome-repos  eos-add-flatpak-gnome-repos.service  eos-boot-upgrade  eos-boot-upgrade.service  eos-chown-avahi-helper-to-writers  eos-chown-avahi-helper-to-writers.service  eos-companion-app.service  eos-companion-app.socket  eos-config-journal  eos-config-journal.service  eos-copy-host-mali-driver  eos-copy-host-mali-driver.service  (+100 more)
debian/: changelog  control  copyright  eos-boot-helper.dirs  eos-boot-helper.install  eos-boot-helper.postinst  rules
dracut/: Makefile.am  endless.conf
dracut/image-boot/: Makefile.am  eos-image-boot-generator  eos-image-boot-setup  eos-image-boot-setup.service  eos-live-early-overlayfs-setup  eos-live-early-overlayfs-setup.service  eos-live-storage-setup  eos-map-image-file  module-setup.sh
factory-reset/: Makefile.am  eos-factory-reset  eos-factory-reset-users  eos-factory-reset-users.service
factory-test/: Makefile.am  eos-factory-test-helper.service  eos-factory-test.service  eos-factory-test.target  helper.c
fallback-fb-setup/: Makefile.am  fallback-fb-setup.c  fallback-fb-setup.service
flatpak-repos/: Makefile.am  eos-sdk.flatpakrepo  flathub.flatpakrepo  gnome.flatpakrepo
journald/: Makefile.am  log.conf
ld.so.conf.d/: flatpak-extension-runtime-fdo-openh264.conf
locale/: Makefile.am
nvidia/: Makefile.am  asus-pci-blacklist  dmi-blacklist  dmi-board-blacklist  nouveau.conf  nvidia-graphics-setup  nvidia-graphics.service
psi-monitor/: Makefile.am  psi-monitor.c  psi-monitor.service
record-boot-success/: Makefile.am  com.endlessm.RecordBootSuccess.conf  com.endlessm.RecordBootSuccess.service  record-boot-success  record-boot-success.desktop  record-boot-success.service
suspend-mode-setup/: Makefile.am  suspend-mode-setup  suspend-mode-setup.service
tests/: Makefile.am  check-syntax  check-syntax.tap  conftest.py  espgen-test-data.sh  run-tests  test_esp_generator.py  test_image_boot.py  test_live_boot_generator.py  test_live_storage.py  test_migrate_chrome_profile.py  test_migrate_chromium_profile.py  test_migrate_firefox_profile.py  test_reclaim_swap.py  test_repartition.py  test_repartition_mbr.py  test_split_flatpak_repo.py  test_update_efi_uuid.py  test_update_flatpak_repos.py  util.py
tests/data/: espgen-efi-fstab-amd64-fstab.json  espgen-gpt-amd64-disk-root.json  espgen-gpt-amd64-fstab.json  espgen-gpt-amd64-mounts-init.json  espgen-gpt-amd64-mounts-reload.json  espgen-mbr-amd64-disk-root.json  espgen-mbr-amd64-fstab.json  espgen-mbr-amd64-mounts-init.json  espgen-mbr-amd64-mounts-reload.json  espgen-payg-amd64-disk-root.json  espgen-payg-amd64-mounts-init.json  espgen-payg-amd64-mounts-reload.json  espgen-payg-xbootldr-amd64-disk-root.json  espgen-payg-xbootldr-amd64-fstab.json  espgen-payg-xbootldr-amd64-mounts-init.json  espgen-payg-xbootldr-amd64-mounts-reload.json
tests/data/reclaim-swap/: gpt-noop-expected.txt  gpt-remove-swap-expected.txt  gpt-remove-swap-input.txt  gpt-remove-swap-preserving-last-expected.txt  gpt-remove-swap-preserving-last-input.txt  mbr-noop-expected.txt  mbr-remove-swap-expected.txt  mbr-remove-swap-input.txt  mbr-remove-swap-preserving-last-expected.txt  mbr-remove-swap-preserving-last-input.txt
tests/efivars/: Boot0000-8be4df61-93ca-11d2-aa0d-00e098032b8c  Boot0001-8be4df61-93ca-11d2-aa0d-00e098032b8c  Boot0002-8be4df61-93ca-11d2-aa0d-00e098032b8c  Boot0003-8be4df61-93ca-11d2-aa0d-00e098032b8c  BootCurrent-8be4df61-93ca-11d2-aa0d-00e098032b8c  BootOrder-8be4df61-93ca-11d2-aa0d-00e098032b8c  ConIn-8be4df61-93ca-11d2-aa0d-00e098032b8c  ConInDev-8be4df61-93ca-11d2-aa0d-00e098032b8c  ConOut-8be4df61-93ca-11d2-aa0d-00e098032b8c  ConOutDev-8be4df61-93ca-11d2-aa0d-00e098032b8c  ErrOut-8be4df61-93ca-11d2-aa0d-00e098032b8c  KEK-8be4df61-93ca-11d2-aa0d-00e098032b8c  Key0000-8be4df61-93ca-11d2-aa0d-00e098032b8c  Key0001-8be4df61-93ca-11d2-aa0d-00e098032b8c  MTC-eb704011-1402-11d3-8e77-00a0c969723b  MokListRT-605dab50-e046-4300-abb6-3dd810dd8b23  MokListXRT-605dab50-e046-4300-abb6-3dd810dd8b23  PK-8be4df61-93ca-11d2-aa0d-00e098032b8c  PlatformRecovery0000-8be4df61-93ca-11d2-aa0d-00e098032b8c  SbatLevelRT-605dab50-e046-4300-abb6-3dd810dd8b23  Timeout-8be4df61-93ca-11d2-aa0d-00e098032b8c  VarErrorFlag-04b37fe8-f6ae-480b-bdd5-37d98c5e89aa  certdb-d9bee56e-75dc-49d9-b4d7-b534210f637a  certdbv-d9bee56e-75dc-49d9-b4d7-b534210f637a  db-d719b2cb-3d3a-4596-a3bc-dad00e67656f
tests/espgen/: README.md  grub-gpt-fstab-efi-fstab.json  grub-gpt-fstab-efi-kcmdline.json  grub-gpt-fstab-efi-mounts-init.json  grub-gpt-mounts-reload.json  grub-gpt-partitions-init.json  grub-gpt-partitions-reload.json  grub-mbr-fstab.json  grub-mbr-kcmdline.json  grub-mbr-mounts-init.json  grub-mbr-mounts-reload.json  grub-mbr-partitions-init.json  grub-mbr-partitions-reload.json  sdboot-fstab.json  sdboot-mounts-init.json  sdboot-mounts-reload.json  sdboot-partitions-init.json  sdboot-partitions-reload.json  sdboot-xbootldr-kcmdline.json  sdboot-xbootldr-mounts-init.json  sdboot-xbootldr-mounts-reload.json  sdboot-xbootldr-partitions-init.json  sdboot-xbootldr-partitions-reload.json  windows-efi-fstab.json  windows-efi-kcmdline.json  windows-efi-mounts-init.json  windows-efi-mounts-reload.json  windows-efi-partitions-init.json  windows-efi-partitions-reload.json
tmpfiles.d/: avahi-service-writers.conf  chromium-system-services.conf.in  (+5 more)
(+16 files in other folders)
