check-local:
	$(srcdir)/check-syntax
	$(srcdir)/run-tests

EXTRA_DIST = \
	__init__.py \
	check-syntax \
	conftest.py \
	data/espgen-efi-fstab-amd64-fstab.json \
	data/espgen-efi-fstab-amd64-mounts-reload.json \
	data/espgen-gpt-amd64-disk-root.json \
	data/espgen-gpt-amd64-fstab.json \
	data/espgen-gpt-amd64-mounts-init.json \
	data/espgen-gpt-amd64-mounts-reload.json \
	data/espgen-mbr-amd64-disk-root.json \
	data/espgen-mbr-amd64-fstab.json \
	data/espgen-mbr-amd64-mounts-init.json \
	data/espgen-mbr-amd64-mounts-reload.json \
	data/espgen-payg-amd64-disk-root.json \
	data/espgen-payg-amd64-fstab.json \
	data/espgen-payg-amd64-mounts-init.json \
	data/espgen-payg-amd64-mounts-reload.json \
	data/espgen-payg-xbootldr-amd64-disk-root.json \
	data/espgen-payg-xbootldr-amd64-fstab.json \
	data/espgen-payg-xbootldr-amd64-mounts-init.json \
	data/espgen-payg-xbootldr-amd64-mounts-reload.json \
	espgen-test-data.sh \
	run-tests \
	test_esp_generator.py \
	test_image_boot.py \
	test_live_storage.py \
	test_migrate_chromium_profile.py \
	test_migrate_firefox_profile.py \
	test_repartition.py \
	test_repartition_mbr.py \
	test_update_flatpak_repos.py \
	util.py \
	$(NULL)
