dracutmoddir = $(prefix)/lib/dracut/modules.d/50eos-image-boot
dist_dracutmod_SCRIPTS = \
	eos-image-boot-generator \
	eos-image-boot-setup \
	eos-live-early-overlayfs-setup \
	eos-map-image-file \
	module-setup.sh \
	$(NULL)
dist_dracutmod_DATA = \
	eos-image-boot-setup.service \
	eos-live-early-overlayfs-setup.service \
	$(NULL)
